--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
+@import url('https://fonts.googleapis.com/css2?family=Playpen+Sans&family=Poor+Story&display=swap');
 .App {
-  text-align: center;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+    font-size: 1.7rem;
+    font-family: "Poor Story", system-ui;
+    text-align: center;
+    background-color: rgb(133, 133, 133);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#result {
+    color: rgb(0, 0, 0);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.mainContainer {
+    margin: 2%;
+    display: flex;
+    justify-content: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.header {
+    padding-left: 11%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 20vh;
+    background-color: bisque;
+    color: rgb(66, 66, 66);
 }
 
-.App-link {
-  color: #61dafb;
+.player1 {
+    margin: 2%;
+    padding: 1%;
+    width: 150px;
+    height: 120px;
+    border-radius: 55px;
+    background-color: lightgray;
+    color: rgb(253, 84, 84);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.computer {
+    margin: 2%;
+    padding: 1%;
+    width: 160px;
+    height: 120px;
+    border-radius: 55px;
+    background-color: lightgray;
+    color: rgb(253, 84, 84);
+}
+
+.playerWins {
+    margin-top: 2%;
+    color: black;
+    display: flex;
+    justify-content: center;
+}
+
+.buttonContainer {
+    display: flex;
+    justify-content: center;
+}
+
+.image {
+    padding: 1.5%;
 }
