--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@
 
 @media (min-width: 320px) and (max-width: 900px) {
     .header {
-        padding-left: 13.2%;
+        padding-left: 20%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -77,7 +77,8 @@
     }
     .player1 {
         margin: 2%;
-        padding: 1%;
+        padding-top: 1%;
+        padding-bottom: 3%;
         width: 150px;
         height: 120px;
         font-size: 1rem;
@@ -87,7 +88,8 @@
     }
     .computer {
         margin: 2%;
-        padding: 1%;
+        padding-top: 1%;
+        padding-bottom: 3%;
         width: 160px;
         height: 120px;
         font-size: 1rem;
