--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@
 
 @media (min-width: 320px) and (max-width: 900px) {
     .header {
-        padding-left: 20%;
+        padding-left: 13%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -77,6 +77,7 @@
     }
     .player1 {
         margin: 2%;
+        margin-bottom: 5%;
         padding-top: 1%;
         padding-bottom: 3%;
         width: 150px;
@@ -87,7 +88,8 @@
         color: rgb(253, 84, 84);
     }
     .computer {
-        margin: 4%;
+        margin-top: 2%;
+        margin-bottom: 5%;
         padding-top: 1%;
         padding-bottom: 3%;
         width: 160px;
