--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,9 @@
 }
 
 @media (min-width: 320px) and (max-width: 900px) {
+    .App {
+        height: 100%;
+    }
     .header {
         padding-left: 1%;
         display: flex;
