--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,12 @@
     padding: 1.5%;
 }
 
+@media (min-width: 390px) {
+    .App {
+        height: 100vh;
+    }
+}
+
 @media (min-width: 320px) and (max-width: 900px) {
     .App {
         height: 250%;
